Signed-off-by: Yonsen <yonsenwu@hotmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,13 @@
         <a class="selected" href="#"><i class="fa fa-home"></i>主页</a>
     </li>
     <li>
-        <a href="#"><i class="fa fa-tags"></i>标签</a>
+        <a href="#user"><i class="fa fa-tags"></i>用户</a>
     </li>
     <li>
-        <a href="#"><i class="fa fa-list"></i>文章</a>
+        <a href="#pages/tag/list"><i class="fa fa-tags"></i>标签</a>
+    </li>
+    <li>
+        <a href="#article"><i class="fa fa-list"></i>文章</a>
     </li>
     <li>
         <a href="#"><i class="fa fa-comments"></i>评论</a>
