Signed-off-by: Yonsen <yonsenwu@hotmail.com>

--- a/src/pages/article/form.html
+++ b/src/pages/article/form.html
@@ -24,9 +24,16 @@
             <input type="text" name="" placeholder="First Name">
         </div>
         <div class="field required">
-            <label>First Name</label>
+            <label>Start date</label>
+            <input id="start_date" type="text" name="" placeholder="First Name">
+        </div>
+        <div class="field required">
+            <label>End date</label>
+            <input id="end_date" type="text" name="" placeholder="First Name">
+        </div>
+        <div class="field required">
+            <label>Gender</label>
             <select class="ui dropdown">
-                <option value="">Gender</option>
                 <option value="1">Male</option>
                 <option value="0">Female</option>
             </select>
