--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <title>Home</title>
     <link type="image/x-icon" rel="shortcut icon" href="favicon.ico"/>
     <link type="text/css" rel="stylesheet" href="themes/semantic.min.css"/>
+    <link type="text/css" rel="stylesheet" href="themes/jquery.datetimepicker.min.css"/>
     <link type="text/css" rel="stylesheet" href="themes/layout.css"/>
     <link rel="dns-prefetch" href="//xx.xx.com"/>
 </head>
