Signed-off-by: Yonsen <yonsenwu@hotmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -49,31 +49,35 @@
     </div>
 </div>
 <div class="full height">
-    <ul id="menu" class="ui vertical following inverted accordion text menu">
+    <ul id="menu" class="ui vertical inverted accordion menu">
         <li class="item">
-            <a class="active title" href="#home"><i class="icon home"></i>主页</a>
+            <a class="title active" href="#home"><i class="icon home"></i>主页</a>
         </li>
         <li class="item">
-            <a class="active title" href="#user"><i class="icon users"></i>用户</a>
+            <a class="title" href="#user"><i class="icon users"></i>用户</a>
         </li>
         <li class="item">
-            <a class="active title" href="#tag"><i class="icon tags"></i>标签</a>
+            <a class="title" href="#tag"><i class="icon tags"></i>标签</a>
         </li>
         <li class="item">
-            <a class="active title" href="#article"><i class="icon list"></i>文章</a>
+            <a class="title" href="#article"><i class="icon list"></i>文章</a>
         </li>
         <li class="item">
-            <a class="active title" href="#article"><i class="icon book"></i>文章</a>
+            <a class="title" href="#article"><i class="icon book"></i>文章</a>
         </li>
         <li class="item">
-            <a class="active title" href="#comments"><i class="icon book"></i>评论</a>
+            <a class="title" href="#comments"><i class="icon book"></i>评论</a>
         </li>
-        <li class="item">
-            <a class="active title" href="#comments"><i class="dropdown icon"></i><i class="icon settings"></i>设置</a>
-            <div class="content menu active">
-                <a class="item" href="#brand-colors"><i class="icon protect"></i>Brand Colors</a>
-                <a class="item" href="#colors"><i class="icon setting"></i>Colors</a>
-            </div>
+        <li class="item accordion">
+            <a class="title" href="#comments"><i class="dropdown icon"></i><i class="icon settings"></i>设置</a>
+            <ul class="content menu">
+                <li class="item">
+                    <a class="title" href="#brand-colors"><i class="icon protect"></i>Brand Colors</a>
+                </li>
+                <li class="item">
+                    <a class="title" href="#colors"><i class="icon setting"></i>Colors</a>
+                </li>
+            </ul>
         </li>
     </ul>
     <div id="wrapper" class="wrapper">
