Signed-off-by: Yonsen <yonsenwu@hotmail.com>

--- a/src/pages/article/form.html
+++ b/src/pages/article/form.html
@@ -33,6 +33,13 @@
         </div>
         <div class="field required">
             <label>Gender</label>
+            <select class="ui fluid search dropdown" multiple="multiple">
+                <option value="1">Male</option>
+                <option value="0">Female</option>
+            </select>
+        </div>
+        <div class="field required">
+            <label>Gender</label>
             <select class="ui dropdown">
                 <option value="1">Male</option>
                 <option value="0">Female</option>
